@@ -1,0 +1,219 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Copyright 2010 The Apache Software Foundation  *  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|util
+package|;
+end_package
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertFalse
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertTrue
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HBaseTestingUtility
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|MiniDFSCluster
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_comment
+comment|/**  * Test {@link FSUtils}.  */
+end_comment
+
+begin_class
+specifier|public
+class|class
+name|TestFSUtils
+block|{
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testIsHDFS
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|HBaseTestingUtility
+name|htu
+init|=
+operator|new
+name|HBaseTestingUtility
+argument_list|()
+decl_stmt|;
+name|htu
+operator|.
+name|getConfiguration
+argument_list|()
+operator|.
+name|setBoolean
+argument_list|(
+literal|"dfs.support.append"
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|FSUtils
+operator|.
+name|isHDFS
+argument_list|(
+name|htu
+operator|.
+name|getConfiguration
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|FSUtils
+operator|.
+name|isAppendSupported
+argument_list|(
+name|htu
+operator|.
+name|getConfiguration
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|htu
+operator|.
+name|getConfiguration
+argument_list|()
+operator|.
+name|setBoolean
+argument_list|(
+literal|"dfs.support.append"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|cluster
+operator|=
+name|htu
+operator|.
+name|startMiniDFSCluster
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|FSUtils
+operator|.
+name|isHDFS
+argument_list|(
+name|htu
+operator|.
+name|getConfiguration
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|FSUtils
+operator|.
+name|isAppendSupported
+argument_list|(
+name|htu
+operator|.
+name|getConfiguration
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|cluster
+operator|!=
+literal|null
+condition|)
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+end_class
+
+end_unit
+
